objects/OlgaStagingTable__c.object
<CustomObject>
    <fields>
        <fullName>Active_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_phone__c</fullName>
        <label>Alternate phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BrandId__c</fullName>
        <label>BrandId</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Brand_Id</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OlgaStagingTable (Contact)</relationshipLabel>
        <relationshipName>OlgaStagingTable1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MultiMatchedContactsData__c</fullName>
        <label>MultiMatchedContactsData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_phone__c</fullName>
        <label>Other phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdBrandName__c</fullName>
        <label>ZdBrandName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdMatchType__c</fullName>
        <description>Match type between Zendesk customer record to SFSC Customer record.</description>
        <label>ZdMatchType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MultipleMatchByEmailFirstName</fullName>
                </value>
                <value>
                    <fullName>MultipleMatchByPhoneFirstName</fullName>
                </value>
                <value>
                    <fullName>New-NoEmailMatch</fullName>
                </value>
                <value>
                    <fullName>New-noEmailorPhoneInSource</fullName>
                </value>
                <value>
                    <fullName>New-NoPhoneMatch</fullName>
                </value>
                <value>
                    <fullName>NoMatchByEmailFirstName</fullName>
                </value>
                <value>
                    <fullName>NoMatchByPhoneFirstName</fullName>
                </value>
                <value>
                    <fullName>UniqueMatchByEmail</fullName>
                </value>
                <value>
                    <fullName>UniqueMatchByEmailFirstName</fullName>
                </value>
                <value>
                    <fullName>UniqueMatchByPhone</fullName>
                </value>
                <value>
                    <fullName>UniqueMatchByPhoneFirstName</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZdMultiMatchedContactIds__c</fullName>
        <description>During migration, if Zendesk customer matches with multiple SFSC contacts, this field will have list of those ids.</description>
        <label>ZdMultiMatchedContactIds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZdNewContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OlgaStagingTable</relationshipLabel>
        <relationshipName>OlgaStagingTable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZdPVHUserId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ZdPVHUserId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZdTnCUserId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ZdTnCUserId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZdUniqueMatchedContactId__c</fullName>
        <description>If Zd customer matches with a unique SFSC customer, this field will hold its id value.</description>
        <label>ZdUniqueMatchedContactId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>active_subscription_date__c</fullName>
        <label>active subscription date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alternate_address__c</fullName>
        <label>alternate address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>created_at__c</fullName>
        <label>created_at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <externalId>true</externalId>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>possible_fraud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>possible fraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>updated_at__c</fullName>
        <label>updated_at</label>
        <type>DateTime</type>
    </fields>
    <label>OlgaStagingTable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BrandId__c</columns>
        <columns>email__c</columns>
        <columns>Source_System__c</columns>
        <columns>ZdTnCUserId__c</columns>
        <columns>updated_at__c</columns>
        <columns>created_at__c</columns>
        <columns>Customer_Name__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OST-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OlgaStagingTable</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>